modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -30,8 +30,8 @@
    },
    "source": [
     "There are **two types of exceptions** in $.NET\\,\\,Framework$: \n",
-    "1. exceptions thrown by the *applications* we develop (`ApplicationException`)\n",
-    "2. exceptions thrown by the *runtime* (`SystemException`). \n",
+    "1. `ApplicationException` - exceptions thrown by the *applications* we develop which are defined by application developers and are used by the application software. \n",
+    "2. `SystemException` - exceptions thrown by the *runtime* which are defined in $.NET$ libraries and are used by the framework.  \n",
     "   \n",
     "Each of these is a **base class** within a **hierarchy of `Exception` classes**:"
    ]
