modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -143,7 +143,7 @@
     }
    },
    "source": [
-    "#### Nested Exceptions"
+    "#### Nested `Exception`s"
    ]
   },
   {
@@ -159,7 +159,7 @@
    },
    "source": [
     "  \n",
-    "Every exception could have a **nested exception**, also sometimes called an **inner exception**, **wrapped exception**, or **internal exception**.   \n",
+    "Every `Exception` could have a **nested exception**, also sometimes called an **inner exception**, **wrapped exception**, or **internal exception**.   \n",
     "   \n",
     "The ability to wrap an exception with another exception is very useful in some cases and allows exceptions to be linked in the so called **exception chain**."
    ]
