modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -415,6 +415,118 @@
    "source": [
     "<br>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Which Exceptions to Handle and Which Not?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "There is *one universal rule* regarding **exception handling**:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "> A method should only handle exceptions which it expects and which it knows how to process. All the other exceptions must be left to the calling method."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If we follow this rule and eventually we reach the `Main()` method (or the starting method of the respective thread of execution), if the exception is not yet caught, then the $CLR$ itself will display the error."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "A method is considered as *competent to handle an **exception*** if it *expects* this **exception**, and it has the information *why the **exception** has been thrown* and *what to do* in this situation.    \n",
+    "   \n",
+    "If we have a method that must *read a text file* and return its contents as a string, that method might catch `FileNotFoundException` and return an empty string in this case.   \n",
+    "   \n",
+    "Still, this same method will hardly be able to correctly handle `OutOfMemoryException`.   \n",
+    "   \n",
+    "What should the method do in case of insufficient memory? Return an empty string? Throw some other exception? Do something completely different? \n",
+    "   \n",
+    "So apparently the method is not competent to handle such exception and thus the best way is to pass the exception up to the calling method so it could (hopefully) be handled at some other level by a method competent to do it. \n",
+    "   \n",
+    "Using this simple philosophy allows exception handling to be done in a structured and systematic way."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
