modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -211,6 +211,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "Let's suppose we have a **software component** (let’s call it **Component** **A**):   "
    ]
   },
