modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -532,6 +532,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -541,7 +542,9 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "### The `try`-`finally` Construct"
+   ]
   }
  ],
  "metadata": {
