--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -545,6 +545,223 @@
    "source": [
     "### The `try`-`finally` Construct"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Every `try` **block** could contain a subsequent `finally` **block**. \n",
+    "   \n",
+    "The code within the `finally` **block** is *always executed*, no matter how the program flow leaves the `try` **block**.    \n",
+    "   \n",
+    "This guarantees that the `finally` **block** will be executed even if an exception is thrown or a return statement is executed within the `try` **block**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The basic form of the `finally` **block** is given as follows:\n",
+    "```c#\n",
+    "try\n",
+    "{\n",
+    "    // Some code that could potentially cause an exception\n",
+    "}\n",
+    "\n",
+    "finally\n",
+    "{\n",
+    "    // Some code that will execute no matter if an exception occurs or not.\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Every `try` **block** may have zero or more `catch` **block**s and at most one `finally` **block**.    \n",
+    "It is possible to have multiple `catch` **block**s and a `finally` **block** in the same `try`-`catch`-`finally` construct:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "try\n",
+    "{\n",
+    "    // Some code that could potentially cause an exception\n",
+    "}\n",
+    "\n",
+    "catch ( Exception someException ) \n",
+    "{\n",
+    "    // Some code handling some exception\n",
+    "}\n",
+    "\n",
+    "catch ( Exception someOtherException ) \n",
+    "{\n",
+    "    // Some code handling some other exception\n",
+    "}\n",
+    "\n",
+    "finally\n",
+    "{\n",
+    "    // Some code that will execute no matter if an exception occurs or not.\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### When Should We Use `try`-`finally`?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "There's many cases when we have to work with $external\\,resources$ for our programs.      \n",
+    "Examples for $external\\,resources$ include: \n",
+    "- *files*\n",
+    "- *network connections*\n",
+    "- *graphical elements*\n",
+    "- *pipes* and *streams to or from different hardware devices*\n",
+    "  - *printers*\n",
+    "  - *card readers*   \n",
+    " \n",
+    "When we deal with such $external\\,resource$, it is critically important to **free up the resources** as early as possible when the resource is no longer needed.   \n",
+    "\n",
+    "For example, when we *open a file to read its contents* (let’s say to load a JPG image), we must **close the file** right after we have read the contents.    \n",
+    "   \n",
+    "If we leave the file open, the operating system will prevent other users and applications to make certain operations on the file. Perhaps you faced such a situation when you could not delete some directory or a file because it is being used by a running process.   \n",
+    "                      \n",
+    "The `finally` **block** is priceless when we need to **free an external resource** or **make any other cleanup**.    \n",
+    "The `finally` **block** guarantees that the **cleanup operations** will not be accidentally skipped because of an unexpected exception or because of execution of `return`, `continue` or `break` statements.    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Because proper resource management is an important concept in programming, we will look at it in some more details."
+   ]
   }
  ],
  "metadata": {
