modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -761,7 +761,204 @@
     }
    },
    "source": [
-    "Because proper resource management is an important concept in programming, we will look at it in some more details."
+    "#####  Resource Cleanup – Defining the Problem"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Because proper **resource management** is an important concept in programming, we will look at it in some more details."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In the above example, when we wanted to **read a file**, we exectuted the following code *to create an instance of the* `StreamReader()` *class*, which enable us to will *store the data taken in from the reader*, and then subsequently *close the data stream*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Recall that we implemented the example above as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "public void ComponentA( string badFileName )\n",
+    "{ \n",
+    "\n",
+    "    // Code that potentially results in an Exception \n",
+    "\n",
+    "    TextReader reader = new StreamReader( badFileName ); \n",
+    "    string line = reader.ReadLine(); \n",
+    "    Console.WriteLine(line); \n",
+    "    reader.Close();\n",
+    "\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "So **what is the problem with this code?**,   \n",
+    "Well, what the code is supposed to *do* is: \n",
+    "1. *Open* up a file reader\n",
+    "2. *Read* the data\n",
+    "3. *Close* the reader before the method returns. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The issue is that, potentially, the method could finish in one of several ways: \n",
+    "- An exception could be thrown when the reader is initialized (say if the file is missing).\n",
+    "- During reading the file, an exception could arise (imagine a file on a remote network device which goes offline during file reading)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#####  Resource Cleanup – Solving the Problem"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "So now that we are aware of the inherent flaw of the plain old $Open \\Rrightarrow Read \\Rrightarrow Close$ approach, how can we go about solving the problem?  \n",
+    "This is actually a conerstone use case for the `try`-`finally` constuct:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "void ProperlyErrorHandled( string potentiallyBadFilename )\n",
+    "{\n",
+    "    \n",
+    "    // Represents a reader that can read a sequential series of characters,\n",
+    "    // initialized as a null value\n",
+    "    TextReader reader = null;\n",
+    "\n",
+    "\n",
+    "    // Execute code that will potentially throw an exeption\n",
+    "    try\n",
+    "    {\n",
+    "        reader = new StreamReader( potentiallyBadFilename );\n",
+    "        string line = reader.ReadLine();\n",
+    "        Console.WriteLine( line );\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // This will execute no matter if the code\n",
+    "    // in the try block causes an exception or not\n",
+    "    finally\n",
+    "    {\n",
+    "        if( reader != null )\n",
+    "            reader.Close();\n",
+    "    }\n",
+    "}"
    ]
   }
  ],
