modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -914,7 +914,22 @@
     }
    },
    "source": [
-    "So now that we are aware of the inherent flaw of the plain old $Open \\Rrightarrow Read \\Rrightarrow Close$ approach, how can we go about solving the problem?  \n",
+    "So now that we are aware of the inherent flaw of the plain old $Open \\Rrightarrow Read \\Rrightarrow Close$ approach,   \n",
+    "how can we go about solving the problem?  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "This is actually a conerstone use case for the `try`-`finally` constuct:"
    ]
   },
