modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -952,29 +952,43 @@
     "void ProperlyErrorHandled( string potentiallyBadFilename )\n",
     "{\n",
     "    \n",
-    "    // Represents a reader that can read a sequential series of characters,\n",
-    "    // initialized as a null value\n",
-    "    TextReader reader = null;\n",
+    "    // If an Exception happens here,  \n",
+    "    // the file will never be opened to begin with\n",
+    "    TextReader reader =  new StreamReader( potentiallyBadFilename );\n",
     "\n",
     "\n",
-    "    // Execute code that will potentially throw an exeption\n",
+    "    // Execute code that will potentially throw an Exeption\n",
     "    try\n",
     "    {\n",
-    "        reader = new StreamReader( potentiallyBadFilename );\n",
     "        string line = reader.ReadLine();\n",
     "        Console.WriteLine( line );\n",
     "    }\n",
     "\n",
     "\n",
-    "    // This will execute no matter if the code\n",
-    "    // in the try block causes an exception or not\n",
+    "    // This will close the file no matter if the code\n",
+    "    // in the try block throws an Exception or not\n",
     "    finally\n",
     "    {\n",
-    "        if( reader != null )\n",
-    "            reader.Close();\n",
+    "        reader.Close();\n",
     "    }\n",
-    "    \n",
+    "\n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "This code is cleaner, shorter and clearer, and is known as a **dispose pattern**.    \n",
+    "However, note that this way, any resulting Exception will go up to the method calling `ProperlyErrorHandled(…)`."
    ]
   }
  ],
