modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -990,6 +990,177 @@
     "This code is cleaner, shorter and clearer, and is known as a **dispose pattern**.    \n",
     "However, note that this way, any resulting Exception will go up to the method calling `ProperlyErrorHandled(…)`."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Cleaning Up Multiple Resources"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Sometimes we need to **free more than one resource**.    \n",
+    "It can be a good practice to free the resources in the *reverse order* that they were allocated in:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "void ProperlyErrorHandledAndNested( someType potentiallyBadData )\n",
+    "{\n",
+    "    \n",
+    "    // If an Exception happens here,  \n",
+    "    // Resource 2 will never get allocated to begin with\n",
+    "    Resource r1 =  new Resource();\n",
+    "    \n",
+    "    // Execute code that will potentially throw an Exeption\n",
+    "    try\n",
+    "    {\n",
+    "        Resource r2 = new Resource2();\n",
+    "\n",
+    "        try\n",
+    "        {\n",
+    "            // use r1 and r2\n",
+    "        }\n",
+    "\n",
+    "        // This will clean up Resource 2 no matter if the code\n",
+    "        // in the try block throws an Exception or not\n",
+    "        finally\n",
+    "        {\n",
+    "            r2.Release();\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    // This will clean up Resource 1 no matter if the code\n",
+    "    // in the try block throws an Exception or not\n",
+    "    finally\n",
+    "    {\n",
+    "        r1.Release();\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Another option is to *declare all of the resources in advance*,  \n",
+    "and then make the cleanup in a single `finally` **block** with respective `null` checks:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "void AnotherProperlyErrorHandledAndNested( someType potentiallyBadData )\n",
+    "{\n",
+    "    \n",
+    "    // Declare both Resources in advance and initialize them as null values \n",
+    "    Resource r1 = null; \n",
+    "    Resource r2 = null; \n",
+    "    \n",
+    "    // Execute code that will potentially throw an Exeption\n",
+    "    try \n",
+    "    {\n",
+    "        // Allocate the memory for both Resources\n",
+    "        Resource r1 = new Resource1(); \n",
+    "        Resource r2 = new Resource2();\n",
+    "\n",
+    "        // Use both r1 and r2\n",
+    "    } \n",
+    "    \n",
+    "    // This will clean up the Resources no matter if the code\n",
+    "    // in the try block throws an Exception or not,\n",
+    "    finally \n",
+    "    {\n",
+    "        if (r1 != null) \n",
+    "            r1.Release();\n",
+    "\n",
+    "        if (r2 != null) \n",
+    "            r2.Release();\n",
+    "    }\n",
+    "}\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -1003,8 +1174,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
