modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -320,8 +320,7 @@
     "\n",
     "\n",
     "    // Implement our own handler for the  FileNotFoundException\n",
-    "    // which prints out a meessage explaining the issue and saves the \n",
-    "    // Stack Trace  in a variable for later reference \n",
+    "    // which prints out a meessage explaining the issue\n",
     "    catch( Exception e )\n",
     "    {\n",
     "        Console.WriteLine( \n",
