modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -472,7 +472,7 @@
     }
    },
    "source": [
-    "> A method should only handle exceptions which it *expects* and *which it knows how to process*.<br>All the other exceptions must be left to the calling method."
+    "> A method should only handle exceptions which it *expects* and which it *knows how to process*.<br>All the other exceptions must be left to the calling method."
    ]
   },
   {
