modified:   12. Exception Handling/Exceptions Heirarchy.ipynb

--- a/12. Exception Handling/Exceptions Heirarchy.ipynb
+++ b/12. Exception Handling/Exceptions Heirarchy.ipynb
@@ -502,7 +502,7 @@
     }
    },
    "source": [
-    "A method is considered as *competent to handle an* **exception** if it *expects* this **exception**, and it has the information *why the **exception** has been thrown* and *what to do* in this situation.    \n",
+    "A method is considered as *competent to handle an* **exception** if it *expects* this **exception**, and it has the information *why the* **exception** *has been thrown* and *what to do* in this situation.    \n",
     "   \n",
     "If we have a method that must *read a text file* and return its contents as a string, that method might catch `FileNotFoundException` and return an empty string in this case.   \n",
     "   \n",
